--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pre-commit": "npm run format && next lint && git add -A ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.26.1",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -26,17 +27,17 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
+    "postcss": "^8",
     "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^3.2.3"
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   },
   "husky": {
     "hooks": {
