--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
+    "@types/uuid": "^9.0.2",
+    "prisma": "^5.1.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   },
