--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.1",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "autoprefixer": "^10",
     "eslint": "^8",
@@ -38,7 +40,6 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
-    "@types/uuid": "^9.0.2",
     "prisma": "^5.1.1",
     "tailwindcss": "^3",
     "typescript": "^5"
